--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,14 @@
 }
 
 :root {
-  --primaryColor: #43B3E0;
+  --primaryColor: #43b3e0;
   --hoverPrimaryColor: #43bff0;
   --padding: 5rem 0;
-  --shadow: 0 3px 3px 0px rgba(67, 179, 224, .3);
+  --shadow: 0 3px 3px 0px rgba(67, 179, 224, 0.3);
 }
 
 body {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   overflow-x: hidden;
 }
 
@@ -76,12 +76,12 @@ nav ul li a {
   text-shadow: -1px 1px 0.5px rgba(0, 0, 0, 0.8);
   font-weight: 600;
   padding: 16px 30px;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 nav ul li:hover a {
   background-color: var(--hoverPrimaryColor);
-  border-radius: 10000px
+  border-radius: 10000px;
 }
 
 header {
@@ -116,7 +116,6 @@ header {
   align-items: flex-start;
 }
 
-
 .about .about-heading {
   font-size: 3.25em;
   font-weight: 100;
@@ -133,7 +132,7 @@ header {
   letter-spacing: 1.3px;
   line-height: 1.5;
   margin-bottom: 3.5rem;
-  color: #777
+  color: #777;
 }
 
 .about .about-desc a {
@@ -157,7 +156,8 @@ header {
   color: white;
   font-weight: 700;
   text-shadow: -1px -1px 0.5px rgba(0, 0, 0, 0.5);
-  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.5), inset 0 2px 1px 0 rgba(255, 255, 255, 0.75);
+  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.5),
+    inset 0 2px 1px 0 rgba(255, 255, 255, 0.75);
   cursor: pointer;
 }
 
@@ -168,7 +168,7 @@ header {
 
 /* STUFF SECTION */
 
-.stuff, 
+.stuff,
 .work {
   padding: var(--padding);
   background-image: url(./../images/bg.png);
@@ -176,7 +176,7 @@ header {
 }
 
 .stuff h2,
-.work h2{
+.work h2 {
   font-size: 2.3rem;
   color: #3e3e3e;
   font-weight: 700;
@@ -208,13 +208,13 @@ header {
   justify-content: space-between;
 }
 
-.stuff .stuff-wrapper>.stuff-box {
+.stuff .stuff-wrapper > .stuff-box {
   background-color: #fff;
   width: 32%;
   padding: 2rem;
   box-shadow: var(--shadow);
   border: 1px solid #e4e4e4;
-  border-radius: 5px
+  border-radius: 5px;
 }
 
 .stuff-box i {
@@ -225,8 +225,6 @@ header {
   font-size: 28px;
   margin-top: 30px;
 }
-
-
 
 /* WORK SECTION */
 
@@ -361,7 +359,8 @@ header {
   color: white;
   font-weight: 700;
   text-shadow: -1px -1px 0.5px rgba(0, 0, 0, 0.5);
-  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.5), inset 0 1px 1px 0 rgba(255, 255, 255, 0.75);
+  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.5),
+    inset 0 1px 1px 0 rgba(255, 255, 255, 0.75);
   cursor: pointer;
 }
 
@@ -375,4 +374,910 @@ header {
 
 .contact-info > form > .buttons > input:last-of-type:hover {
   background-color: #454949;
+}
+
+/* SOCIAL SECTION */
+
+.find-me {
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
+  text-align: center;
+  width: 65%;
+}
+
+.find-me > hr {
+  border: 0;
+  border-top: solid 1px #444;
+  border-top-color: rgba(0, 0, 0, 0.35);
+  box-shadow: 0px 1px 0px 0px rgb(255 255 255 / 10%);
+  height: 1px;
+  margin: 3em 0;
+}
+
+.find-me > h2 {
+  color: #fff;
+  font-size: 25px;
+}
+
+.find-me > .social-icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  column-gap: 20px;
+}
+
+.find-me > .social-icons > .fab {
+  font-size: 40px;
+  cursor: pointer;
+}
+
+.find-me > .social-icons > .fa-twitter:hover {
+  color: #00acee;
+}
+
+.find-me > .social-icons > .fa-facebook-f:hover {
+  color: #3b5998;
+}
+
+.find-me > .social-icons > .fa-linkedin:hover {
+  color: #0072b1;
+}
+
+.find-me > .social-icons > .fa-pinterest:hover {
+  color: #e60023;
+}
+
+.find-me > .social-icons > .fa-github:hover {
+  color: #171515;
+}
+
+.find-me > .social-icons > .fa-stack-overflow:hover {
+  color: #f48024;
+}
+
+.find-me > .social-icons > .fa-codepen:hover {
+  color: #111;
+}
+
+.find-me > .social-icons > .fa-youtube:hover {
+  color: #ff0000;
+}
+
+.copyrights {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  column-gap: 10px;
+}
+
+.copyrights > span {
+  color: #707070;
+}
+
+.copyrights > span > a {
+  color: var(--primaryColor);
+}
+
+@media (max-width: 360px) {
+  nav {
+    padding: 15px 0;
+  }
+
+  nav ul li a {
+    font-weight: 300;
+    padding: 12px 10px;
+    transition: all 0.3s;
+    font-size: 14px;
+  }
+
+  .about {
+    width: 100%;
+    flex-direction: column;
+    max-height: auto;
+    height: fit-content;
+    row-gap: 20px;
+  }
+
+  .about .about-image {
+    margin: 30px auto 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+  }
+
+  .about .about-information {
+    width: 95%;
+    align-items: center;
+    margin-bottom: 30px;
+  }
+
+  .about .about-heading {
+    font-size: 1.6em;
+    margin-bottom: 1rem;
+  }
+
+  .about .about-heading span {
+    font-weight: 500;
+  }
+
+  .about .about-desc {
+    font-size: 1.2rem;
+    line-height: 1.3;
+    margin-bottom: 1.5rem;
+    text-align: center;
+  }
+
+  .about .about-desc a {
+    color: var(--primaryColor);
+    transition: 1s;
+  }
+
+  .about .about-desc a:hover {
+    color: var(--hoverPrimaryColor);
+  }
+
+  .stuff-info {
+    row-gap: 30px;
+    width: 95%;
+    text-align: center;
+  }
+
+  .stuff-info .stuff-wrapper {
+    flex-direction: column;
+    row-gap: 20px;
+  }
+
+  .stuff .stuff-wrapper > .stuff-box {
+    width: 100%;
+    padding: 1rem;
+  }
+
+  .stuff-box h3 {
+    font-size: 20px;
+    margin-top: 20px;
+  }
+
+  .stuff,
+  .work {
+    padding: 30px 0;
+  }
+
+  .work > .work-info {
+    row-gap: 30px;
+    text-align: center;
+    width: 90%;
+  }
+
+  .about .btn,
+  .stuff .btn,
+  .work .btn {
+    padding: 1rem 1.4rem;
+    font-size: 1rem;
+  }
+  .stuff h2,
+  .work h2 {
+    font-size: 1.4rem;
+  }
+
+  .stuff p,
+  .work p {
+    margin-top: 1.4rem;
+    font-size: 1rem;
+  }
+
+  .work-wrapper > .work-box {
+    min-width: 100%;
+  }
+
+  .work-wrapper > .work-box > img {
+    width: 100%;
+  }
+
+  .work-wrapper > .work-box > span {
+    font-size: 22px;
+  }
+
+  .work-wrapper > .work-box > p {
+    font-size: 16px;
+    padding-bottom: 20px;
+  }
+
+  .work > .work-info > p {
+    font-size: 17px;
+  }
+
+  .contact-info {
+    text-align: center;
+  }
+
+  .contact-info > h2 {
+    font-size: 1.3rem;
+  }
+
+  .contact-info > p {
+    font-size: 0.8rem;
+  }
+
+  .contact-info > form {
+    width: 90%;
+    row-gap: 15px;
+  }
+
+  .contact-info > form > .form-row {
+    flex-direction: column;
+    row-gap: 15px;
+  }
+
+  .contact-info > form > .form-row > input {
+    width: 100%;
+    padding: 14px 10px;
+    font-size: 16px;
+  }
+
+  .contact-info > form > input,
+  .contact-info > form > textarea {
+    padding: 14px 10px;
+    font-size: 15px;
+  }
+
+  .contact-info > form > textarea {
+    resize: none;
+    height: 150px;
+  }
+
+  .contact-info > form > .buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    column-gap: 15px;
+  }
+
+  .contact-info > form > .buttons > input {
+    padding: 0.8rem 1.3rem;
+    font-size: 0.9rem;
+    font-weight: 300;
+  }
+
+  .find-me {
+    row-gap: 20px;
+  }
+
+  .find-me > hr {
+    margin: 1.5em 0;
+  }
+
+  .find-me > h2 {
+    color: #fff;
+    font-size: 25px;
+  }
+
+  .find-me > .social-icons {
+    row-gap: 20px;
+    flex-wrap: wrap;
+  }
+
+  .find-me > .social-icons > .fab {
+    font-size: 30px;
+  }
+
+  .copyrights {
+    flex-wrap: wrap;
+    padding: 0 6px 0 6px;
+  }
+}
+
+@media (min-width: 361px) and (max-width: 767px) {
+  nav {
+    padding: 20px 0;
+  }
+
+  nav ul li a {
+    font-weight: 300;
+    padding: 14px 15px;
+    transition: all 0.3s;
+    font-size: 16px;
+  }
+
+  .about {
+    width: 100%;
+    flex-direction: column;
+    max-height: auto;
+    height: fit-content;
+    row-gap: 20px;
+  }
+
+  .about .about-image {
+    margin: 30px auto 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+  }
+
+  .about > .about-image > img {
+    width: 50%
+  }
+
+  .about .about-information {
+    width: 95%;
+    align-items: center;
+    margin-bottom: 30px;
+  }
+
+  .about .about-heading {
+    font-size: 1.6em;
+    margin-bottom: 1rem;
+  }
+
+  .about .about-heading span {
+    font-weight: 500;
+  }
+
+  .about .about-desc {
+    font-size: 1.2rem;
+    line-height: 1.3;
+    margin-bottom: 1.5rem;
+    text-align: center;
+  }
+
+  .about .about-desc a {
+    color: var(--primaryColor);
+    transition: 1s;
+  }
+
+  .about .about-desc a:hover {
+    color: var(--hoverPrimaryColor);
+  }
+
+  .stuff-info {
+    row-gap: 30px;
+    width: 95%;
+    text-align: center;
+  }
+
+  .stuff-info .stuff-wrapper {
+    flex-direction: column;
+    row-gap: 20px;
+  }
+
+  .stuff .stuff-wrapper > .stuff-box {
+    width: 100%;
+    padding: 1rem;
+  }
+
+  .stuff-box h3 {
+    font-size: 20px;
+    margin-top: 20px;
+  }
+
+  .stuff,
+  .work {
+    padding: 30px 0;
+  }
+
+  .work > .work-info {
+    row-gap: 30px;
+    text-align: center;
+    width: 90%;
+  }
+
+  .about .btn,
+  .stuff .btn,
+  .work .btn {
+    padding: 1rem 1.4rem;
+    font-size: 1rem;
+  }
+  .stuff h2,
+  .work h2 {
+    font-size: 1.4rem;
+  }
+
+  .stuff p,
+  .work p {
+    margin-top: 1.4rem;
+    font-size: 1rem;
+  }
+
+  .work-wrapper > .work-box {
+    min-width: 100%;
+  }
+
+  .work-wrapper > .work-box > img {
+    width: 100%;
+  }
+
+  .work-wrapper > .work-box > span {
+    font-size: 22px;
+  }
+
+  .work-wrapper > .work-box > p {
+    font-size: 16px;
+    padding-bottom: 20px;
+  }
+
+  .work > .work-info > p {
+    font-size: 17px;
+  }
+
+  .contact-info {
+    text-align: center;
+  }
+
+  .contact-info > h2 {
+    font-size: 1.3rem;
+  }
+
+  .contact-info > p {
+    font-size: 0.8rem;
+  }
+
+  .contact-info > form {
+    width: 90%;
+    row-gap: 15px;
+  }
+
+  .contact-info > form > .form-row {
+    flex-direction: column;
+    row-gap: 15px;
+  }
+
+  .contact-info > form > .form-row > input {
+    width: 100%;
+    padding: 14px 10px;
+    font-size: 16px;
+  }
+
+  .contact-info > form > input,
+  .contact-info > form > textarea {
+    padding: 14px 10px;
+    font-size: 15px;
+  }
+
+  .contact-info > form > textarea {
+    resize: none;
+    height: 150px;
+  }
+
+  .contact-info > form > .buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    column-gap: 15px;
+  }
+
+  .contact-info > form > .buttons > input {
+    padding: 0.8rem 1.3rem;
+    font-size: 0.9rem;
+    font-weight: 300;
+  }
+
+  .find-me {
+    row-gap: 20px;
+  }
+
+  .find-me > hr {
+    margin: 1.5em 0;
+  }
+
+  .find-me > h2 {
+    color: #fff;
+    font-size: 25px;
+  }
+
+  .find-me > .social-icons {
+    row-gap: 20px;
+    flex-wrap: wrap;
+  }
+
+  .find-me > .social-icons > .fab {
+    font-size: 30px;
+  }
+
+  .copyrights {
+    flex-wrap: wrap;
+    padding: 0 6px 0 6px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1180px) {
+  nav {
+    padding: 20px 0;
+  }
+
+  .about {
+    width: 95%;
+    flex-direction: row;
+    height: fit-content;
+    row-gap: 20px;
+    column-gap: 20px;
+    margin-top: 20px;
+  }
+
+  .about .about-image {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 30px;
+  }
+
+  .about > .about-image > img {
+    width: 90%;
+  }
+
+  .about .about-information {
+    width: 95%;
+    align-items: center;
+    row-gap: 10px;
+    margin-bottom: 20px;
+  }
+
+  .about .about-heading {
+    font-size: 1.6em;
+    margin-bottom: 1rem;
+  }
+
+  .about .about-heading span {
+    font-weight: 500;
+  }
+
+  .about .about-desc {
+    font-size: 1.2rem;
+    line-height: 1.3;
+    margin-bottom: 1.5rem;
+    text-align: center;
+  }
+
+  .stuff-info {
+    row-gap: 30px;
+    width: 95%;
+    text-align: center;
+  }
+
+  .stuff-info .stuff-wrapper {
+    flex-direction: row;
+    row-gap: 20px;
+  }
+
+  .stuff .stuff-wrapper > .stuff-box {
+    width: calc((100% / 2) - 10px);
+    padding: 1rem;
+  }
+
+  .stuff-box h3 {
+    font-size: 20px;
+    margin-top: 20px;
+  }
+
+  .stuff,
+  .work {
+    padding: 30px 0;
+  }
+
+  .work > .work-info {
+    row-gap: 30px;
+    text-align: center;
+    width: 95%;
+  }
+
+  .about .btn,
+  .stuff .btn,
+  .work .btn {
+    padding: 1rem 1.4rem;
+    font-size: 1rem;
+  }
+  .stuff h2,
+  .work h2 {
+    font-size: 1.4rem;
+  }
+
+  .stuff p,
+  .work p {
+    margin-top: 1.4rem;
+    font-size: 1rem;
+  }
+
+  .work-wrapper {
+    flex-direction: row;
+  }
+
+  .work-wrapper > .work-box {
+    min-width: calc((100% / 2) - 15px);
+  }
+
+  .work-wrapper > .work-box > img {
+    width: 100%;
+  }
+
+  .work-wrapper > .work-box > span {
+    font-size: 22px;
+  }
+
+  .work-wrapper > .work-box > p {
+    font-size: 16px;
+    padding-bottom: 20px;
+  }
+
+  .work > .work-info > p {
+    font-size: 17px;
+  }
+
+  .contact-info {
+    text-align: center;
+  }
+
+  .contact-info > h2 {
+    font-size: 1.3rem;
+  }
+
+  .contact-info > p {
+    font-size: 0.8rem;
+  }
+
+  .contact-info > form {
+    width: 90%;
+    row-gap: 20px;
+  }
+
+  .contact-info > form > .form-row {
+    flex-direction: column;
+    row-gap: 20px;
+  }
+
+  .contact-info > form > .form-row > input {
+    width: 100%;
+    padding: 20px 10px;
+    font-size: 16px;
+  }
+
+  .contact-info > form > input,
+  .contact-info > form > textarea {
+    padding: 20px 10px;
+    font-size: 15px;
+  }
+
+  .contact-info > form > textarea {
+    resize: none;
+    height: 150px;
+  }
+
+  .contact-info > form > .buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    column-gap: 15px;
+  }
+
+  .contact-info > form > .buttons > input {
+    padding: 1rem 1.8rem;
+    font-size: 0.9rem;
+    font-weight: 300;
+  }
+
+  .find-me {
+    row-gap: 20px;
+  }
+
+  .find-me > hr {
+    margin: 1.5em 0;
+  }
+
+  .find-me > h2 {
+    color: #fff;
+    font-size: 25px;
+  }
+
+  .find-me > .social-icons {
+    row-gap: 20px;
+    flex-wrap: wrap;
+  }
+
+  .find-me > .social-icons > .fab {
+    font-size: 40px;
+  }
+
+  .copyrights {
+    flex-wrap: wrap;
+    padding: 0 6px 0 6px;
+  }
+}
+@media (min-width: 1181px) and (max-width: 1350px) {
+  .about {
+    width: 100%;
+    height: fit-content;
+    row-gap: 20px;
+    column-gap: 20px;
+    margin-top: 50px;
+  }
+
+  .about .about-image {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 30px;
+  }
+
+  .about > .about-image > img {
+    width: 80%;
+  }
+
+  .about .about-information {
+    width: 95%;
+    align-items: center;
+    row-gap: 10px;
+    margin-bottom: 20px;
+  }
+
+  .about .about-heading {
+    font-size: 1.6em;
+    margin-bottom: 1rem;
+  }
+
+  .about .about-heading span {
+    font-weight: 500;
+  }
+
+  .about .about-desc {
+    font-size: 1.2rem;
+    line-height: 1.3;
+    margin-bottom: 1.5rem;
+    text-align: center;
+  }
+
+  .stuff-info {
+    row-gap: 30px;
+    width: 95%;
+    text-align: center;
+  }
+
+  .stuff-info .stuff-wrapper {
+    flex-direction: row;
+    row-gap: 20px;
+  }
+
+  .stuff .stuff-wrapper > .stuff-box {
+    width: calc((100% / 3) - 10px);
+    padding: 1rem;
+  }
+
+  .stuff-box h3 {
+    font-size: 20px;
+    margin-top: 20px;
+  }
+
+  .stuff,
+  .work {
+    padding: 30px 0;
+  }
+
+  .work > .work-info {
+    row-gap: 30px;
+    text-align: center;
+    width: 95%;
+  }
+
+  .about .btn,
+  .stuff .btn,
+  .work .btn {
+    padding: 1.2rem 1.8rem;
+    font-size: 1.3rem;
+  }
+  .stuff h2,
+  .work h2 {
+    font-size: 1.4rem;
+  }
+
+  .stuff p,
+  .work p {
+    margin-top: 1.4rem;
+    font-size: 1rem;
+  }
+
+  .work-wrapper {
+    flex-direction: row;
+    column-gap: 15px;
+    row-gap: 15px;
+  }
+
+  .work-wrapper > .work-box {
+    min-width: calc((100% / 3) - 10px);
+  }
+
+  .work-wrapper > .work-box > img {
+    width: 100%;
+  }
+
+  .work-wrapper > .work-box > span {
+    font-size: 22px;
+  }
+
+  .work-wrapper > .work-box > p {
+    font-size: 16px;
+    padding-bottom: 20px;
+  }
+
+  .work > .work-info > p {
+    font-size: 17px;
+  }
+
+  .contact-info {
+    text-align: center;
+  }
+
+  .contact-info > h2 {
+    font-size: 1.3rem;
+  }
+
+  .contact-info > p {
+    font-size: 0.8rem;
+  }
+
+  .contact-info > form {
+    width: 70%;
+    row-gap: 20px;
+  }
+
+  .contact-info > form > .form-row {
+    flex-direction: row;
+    row-gap: 20px;
+  }
+
+  .contact-info > form > .form-row > input {
+    width: 100%;
+    padding: 20px 10px;
+    font-size: 16px;
+  }
+
+  .contact-info > form > input,
+  .contact-info > form > textarea {
+    padding: 20px 10px;
+    font-size: 15px;
+  }
+
+  .contact-info > form > textarea {
+    resize: none;
+    height: 150px;
+  }
+
+  .contact-info > form > .buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    column-gap: 15px;
+  }
+
+  .contact-info > form > .buttons > input {
+    padding: 1rem 1.8rem;
+    font-size: 0.9rem;
+    font-weight: 300;
+  }
+
+  .find-me {
+    row-gap: 20px;
+  }
+
+  .find-me > hr {
+    margin: 1.5em 0;
+  }
+
+  .find-me > h2 {
+    color: #fff;
+    font-size: 25px;
+  }
+
+  .find-me > .social-icons {
+    row-gap: 20px;
+    flex-wrap: wrap;
+  }
+
+  .find-me > .social-icons > .fab {
+    font-size: 40px;
+  }
+
+  .copyrights {
+    flex-wrap: wrap;
+    padding: 0 6px 0 6px;
+  }
 }
